--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "lib": "vue-cli-service build --target lib --name vue-calendar --dest lib packages/index.js",
+    "lib": "vue-cli-service build --target lib --name calendar --dest lib src/components/index.js"
   },
   "dependencies": {
     "core-js": "^3.4.3",
